--- a/.github/workflows/teardown.yml
+++ b/.github/workflows/teardown.yml
@@ -1,6 +1,12 @@
 name: Teardown
 on:
   workflow_dispatch:
+    inputs:
+      test:
+        description: "Hello there"
+        required: true
+        type: boolean
+        default: false
 
 jobs:
   teardown:
