--- a/.github/workflows/pulumi.yml
+++ b/.github/workflows/pulumi.yml
@@ -5,7 +5,7 @@ on:
       pulumi-subcommand:
         required: true
         type: string
-        description: 'Pulumi subcommand to run'
+        description: "Pulumi subcommand to run"
 
 jobs:
   build:
@@ -24,6 +24,14 @@ jobs:
           credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
       - name: Configure Docker for GCP
         run: gcloud auth configure-docker asia-southeast1-docker.pkg.dev --quiet
+      - name: Cache Docker layers
+        if: inputs.pulumi-subcommand == 'up'
+        uses: actions/cache@v3
+        with:
+          path: /var/lib/docker
+          key: docker-${{ runner.os }}-${{ github.sha }}
+          restore-keys: |
+            docker-${{ runner.os }}-
       - name: Deploy to GCP
         uses: pulumi/actions@v6
         env:
