Update to use dockerbuild instead of docker

--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
         "typescript": "^5.0.0"
     },
     "dependencies": {
-        "@pulumi/docker": "^4.5.7",
+        "@pulumi/docker-build": "^0.0.7",
         "@pulumi/gcp": "^8.0.0",
-        "@pulumi/pulumi": "^3.113.0"
+        "@pulumi/pulumi": "^3.113.0",
+        "@types/express": "^5.0.0",
+        "express": "^4.21.1"
     }
 }
