--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google-cloud/secret-manager": "^5.6.0",
     "@hono/node-server": "^1.13.7",
     "hono": "^4.6.12"
   },
