--- a/.github/workflows/pulumi.yml
+++ b/.github/workflows/pulumi.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
       - name: Configure Docker for GCP
-        run: gcloud auth configure-docker asia-southeast1-docker.pkg.dev --quiet
+        run: gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
       - name: Deploy to GCP
         uses: pulumi/actions@v6
         env:
