Add load balancer for custom domains

--- a/Pulumi.dev.yaml
+++ b/Pulumi.dev.yaml
@@ -1,4 +1,5 @@
 config:
   gcp:project: gcr-test-temp
   gcp:region: asia-southeast1
+  quickstart:domain: abc.tropicbliss.net
 encryptionsalt: v1:xf+D1yjP4tk=:v1:gZqhgPjUq60P4eo6:Lq0F1xF7hWdE7RNXFYVLe0kXurzjrw== # this can be safely committed, not to worry
