--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@google-cloud/secret-manager": "^5.6.0",
     "@hono/node-server": "^1.13.7",
+    "firebase-admin": "^13.0.1",
     "hono": "^4.6.12"
   },
   "devDependencies": {
