--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,7 @@
 name: Deploy to Google Cloud
+concurrency:
+  group: ${{ github.ref }}
+  cancel-in-progress: false
 on:
   workflow_dispatch:
   push:
